# note-detector

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/classes/: classes.h
main/config/: i2s_config.c  i2s_config.h
main/i2s_mic/: i2s_mic.c  i2s_mic.h
main/note_parsing/: notes.c  notes.h
main/signal_handlers/: signal_handlers.c  signal_handlers.h
